--- a/OutOfWorkingHours.Training.Basket/Configurations/ConfigurationSettings.Debug.json
+++ b/OutOfWorkingHours.Training.Basket/Configurations/ConfigurationSettings.Debug.json
@@ -1,4 +1,3 @@
-﻿{
-  "databaseConfiguration": { "connectionString": "pluto" },
-  "smtpConfiguration": { "hostName": "nomeHost", "port": "25", "userName":  "utente", "password": "pswd"  }  
+﻿{  
+  "smtpConfiguration": { "password": "pswdDebug"  }  
 }
